# UBB-Computer-Science

./: .gitignore  README.md
Semester1/Computational Logic/Individual-Homework/: Boolean-functions_ex4.3_Iancu Gheorghe-Aurelian.pptx  Predicate_logic_7.3_Iancu_Gheorghe_Aurelian.pptx
Semester1/Computer Systems Architecture/Lab-exam/: Requirements.docx  practic_exam.asm
Semester1/Computer Systems Architecture/Lab11/: Requirements.docx  Tema11_ex25.asm  Tema11_ex25_procedure.asm
Semester1/Computer Systems Architecture/Lab12/: Requirements.docx  main.c  modul.asm
Semester1/Computer Systems Architecture/Lab2/: Requirements.docx  ex1.asm  ex2.asm  ex3.asm  ex4.asm  ex5.asm  ex6.asm  ex7.asm  ex8.asm
Semester1/Computer Systems Architecture/Lab3/: Requirements.docx  Tema3_ex1.asm  Tema3_ex2.asm  Tema3_ex3.asm  Tema3_ex4.asm  Tema3_ex5.asm  Tema3_ex6.asm
Semester1/Computer Systems Architecture/Lab4/: Requirements.docx  Tema4_ex10.asm  Tema4_ex25.asm
Semester1/Computer Systems Architecture/Lab5/: Requirements.docx  Tema5_10.asm  Tema5_25.asm
Semester1/Computer Systems Architecture/Lab6/: Requirements.docx  Tema6_ex10.asm  Tema6_ex25.asm
Semester1/Computer Systems Architecture/Lab8/: Requirements.docx  Tema8_ex10.asm  Tema8_ex25.asm
Semester1/Fundamentals of Programming/OrderAndChaos/: README.md
Semester1/Fundamentals of Programming/TrainingLayeredArhitecture1/: main.py
Semester1/Fundamentals of Programming/a1-FP/: README.md  p1.py
Semester2/Data Structures and Algorithms/: README.md
Semester2/Data Structures and Algorithms/Lab1/: Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp
Semester2/Data Structures and Algorithms/Lab2/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  ShortTest.cpp  ShortTest.h  SortedIndexeList.cpp  SortedIndexedList.h
Semester2/Data Structures and Algorithms/Lab3/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  ShortTest.cpp  ShortTest.h  SortedIteratedList.cpp  SortedIteratedList.h
Semester2/Data Structures and Algorithms/Lab4/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  ShortTest.h  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
Semester2/Data Structures and Algorithms/Lab5/: CMakeLists.txt  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.cpp  SortedMultiMap.h
Semester2/Graphs/: README.md
Semester2/Graphs/HW1/: Documentation HW1.docx
Semester2/Graphs/HW2/: graph.py  main.py
Semester2/Graphs/HW3/: graph.py  main.py  output.2.txt  output1.txt
Semester2/Graphs/HW4/: console.py  example1.txt  graph.py  main.py
Semester2/Graphs/HW5/: MyExceptions.py  Service.py  UI.py  UndirectedGraph.py  graph4v.txt  main.py
Semester2/Object Oriented Programming/Labs/a3-4-OOP/: CMakeLists.txt  domain.c  domain.h  dynamicArray.c  dynamicArray.h  main.c  repository.c  repository.h  service.c  service.h  ui.c  ui.h  undoRedo.c  undoRedo.h
Semester2/Object Oriented Programming/Labs/a5-6-OOP/: CMakeLists.txt  README.md  comparator.cpp  comparator.h  dynamicVector.cpp  dynamicVector.h  main.cpp  movie.cpp  movie.h  repository.cpp  repository.h  service.cpp  service.h  tests.cpp  tests.h  ui.cpp  ui.h  userRepository.cpp  userRepository.h  userService.cpp  userService.h
Semester2/Object Oriented Programming/Labs/a8-9-OOP/: CMakeLists.txt  CSVrepository.cpp  CSVrepository.h  HTMLrepository.cpp  Playlist.csv  Playlist.html  main.cpp  movie.cpp  movie.h  movies.txt  repository.cpp  repository.h  service.cpp  service.h  ui.cpp  ui.h  userService.cpp
Semester2/Object Oriented Programming/Practice/Hospital Department/: CMakeLists.txt  File  HospitalDepartment.cpp  HospitalDepartment.h  NeonatalUnit.cpp  NeonatalUnit.h  Service.cpp  Service.h  Surgery.cpp  Surgery.h  UI.cpp  UI.h  main.cpp
Semester2/Object Oriented Programming/Practice/Medical Analysis/: BMI.cpp  BMI.h  BMI.txt  BP.cpp  BP.h  BP.txt  CMakeLists.txt  MedicalAnalysis.cpp  MedicalAnalysis.h  Person.cpp  Person.h  UI.cpp  UI.h  Utils.cpp  Utils.h  main.cpp
Semester2/Object Oriented Programming/Practice/Old Buildings/: Block.cpp  Block.h  Building.cpp  Building.h  CMakeLists.txt  House.cpp  House.h  Service.cpp  Service.h  UI.cpp  UI.h  main.cpp
Semester2/Object Oriented Programming/Practice/PracticalExample/: CMakeLists.txt  Observer.cpp  Observer.h  PRACTICAL EXAMINATION.docx  domain.cpp  domain.h  issues.txt  main.cpp  repository.cpp  repository.h  service.cpp  service.h  tests.h  users.txt  window.cpp  window.h  window.ui
Semester2/Operating Systems/boian/: wq
Semester3/Advanced Programming Methods/Homeworks/: A7.rar
Semester3/Computer Networks/Practic/: FirstTry.pkt  practic.pkt
Semester3/Computer Networks/labTest/: client.py  server.py
Semester3/Databases/Lab1/: CreateStoreDatabase.sql
Semester3/Databases/Lab2/: Lab2.sql  README.md  insert-update-delete.sql  lab2.sql
Semester3/Databases/Lab3/: README.md
Semester3/Databases/Lab4/: README.md  lab4.sql
Semester3/Databases/Lab5/: lab5.sql
Semester3/Functional & logic programming/P1/: README.md  p1.txt
Semester3/Functional & logic programming/P2/: 4.txt  README.md
Semester3/Functional & logic programming/R1/: README.md  lista.cpp  main.cpp
Semester4/Software Systems Engineering/: .gitignore  README.md
Semester4/Web Programming/: notepad.txt
Semester5/Parallel and Distributed Programming/: Lab2.rar  Project.rar
Semester5/Specialised Protocols In Computer Networks/: DemoCheatSheet.txt  HeadscaleVPN.pptx
Semester6/Blockchain/: Presentation.pptx
Semester6/GameDev/3DGame/: README.md
Semester6/NC/: Lab11CN.m  Lab12CN.m  Lab1CN.m  Lab2CN.m  Lab3CN.m  Lab4CN.m  Lab5CN.m  Lab6CN.m  Lab7CN.m  Lab8CN.m  Lab9CN.m  aitken_int.m  backward_diff.m  backward_subs.m  bisect.m  divided_diff.m  divided_diff2.m  forward_diff.m  forward_subs.m  gauss_pivot.m  gauss_quad.m  lab4.m  lagrange_barycentric.m  lagrange_int.m  newton.m  newton_int.m  noName2Gauss.m  noName2Jacobi.m  no_name.m  romberg.m  secant.m  test.m
Semester6/PBT/: ParagraphsAbRefs.rtf
(+1170 files in other folders)
