cmake_minimum_required(VERSION 3.21)
project(Test2practice_915)

set(CMAKE_CXX_STANDARD 14)

add_executable(Test2practice_915 main.cpp
        Block.cpp
        Block.h
        Building.cpp
        Building.h
        House.cpp
        House.h
        Service.cpp
        Service.h
        main.cpp
        UI.cpp
        UI.h)
